5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1671_1872.log
== TEST (2019-04-23 12:51:50) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))

if (x == y) and (y == 0):
	print("Origem")
	
	

-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 12:52:08) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))

if (x == y) and (y == 0):
	print("Origem")
	
	

-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:30:26) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))

if (x == y) and (y == 0):
	print("Origem")
elif (y == 0):
	if (x > 0) or (x < 0):
		print("Eixo X")
elif (x == 0):
	if (y > 0) or (y < 0):
		print("Eixo Y")
elif (y > 0):
	if (x > 0):
		print(Q1)
	else: 
		print(Q2)
elif (y < 0):
	if (x > 0):
		print(Q4)
	else:
		print(Q3)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(Q4)
NameError: name 'Q4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:30:41) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))

if (x == y) and (y == 0):
	print("Origem")
elif (y == 0):
	if (x > 0) or (x < 0):
		print("Eixo X")
elif (x == 0):
	if (y > 0) or (y < 0):
		print("Eixo Y")
elif (y > 0):
	if (x > 0):
		print(Q1)
	else: 
		print(Q2)
elif (y < 0):
	if (x > 0):
		print(Q4)
	else:
		print(Q3)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(Q4)
NameError: name 'Q4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:31:31) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))

if (x == y) and (y == 0):
	print("Origem")
elif (y == 0):
	if (x > 0) or (x < 0):
		print("Eixo X")
elif (x == 0):
	if (y > 0) or (y < 0):
		print("Eixo Y")
elif (y > 0):
	if (x > 0):
		print("Q1")
	else: 
		print("Q2")
elif (y < 0):
	if (x > 0):
		print("Q4")
	else:
		print("Q3")
	
	

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:31:46) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))

if (x == y) and (y == 0):
	print("Origem")
elif (y == 0):
	if (x > 0) or (x < 0):
		print("Eixo X")
elif (x == 0):
	if (y > 0) or (y < 0):
		print("Eixo Y")
elif (y > 0):
	if (x > 0):
		print("Q1")
	else: 
		print("Q2")
elif (y < 0):
	if (x > 0):
		print("Q4")
	else:
		print("Q3")
	
	

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:32:06) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))

if (x == y) and (y == 0):
	print("Origem")
elif (y == 0):
	if (x > 0) or (x < 0):
		print("Eixo X")
elif (x == 0):
	if (y > 0) or (y < 0):
		print("Eixo Y")
elif (y > 0):
	if (x > 0):
		print("Q1")
	else: 
		print("Q2")
elif (y < 0):
	if (x > 0):
		print("Q4")
	else:
		print("Q3")
	
	

-- EXECUTION TIME:
0.1765
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:32:59) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))

if (x == y) and (y == 0):
	print("Origem")
elif (y == 0):
	if (x > 0) or (x < 0):
		print("Eixo X")
elif (x == 0):
	if (y > 0) or (y < 0):
		print("Eixo Y")
elif (y > 0):
	if (x > 0):
		print("Q1")
	else: 
		print("Q2")
elif (y < 0):
	if (x > 0):
		print("Q4")
	else:
		print("Q3")
	
	

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
